Update 'dgnnzapzq-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f0fe1086b8.p6l2.p3.openshiftapps.com/rhtap/rhtap-qe:c4a92975e8475ef97745d1e61452b6f335de14f8@sha256:45ae75cc54622aaefe808392927c6cb3289d439c6a02a0ace83c54bef7b21944

--- a/components/dgnnzapzq-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/dgnnzapzq-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dgnnzapzq-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f0fe1086b8.p6l2.p3.openshiftapps.com/rhtap/rhtap-qe:c4a92975e8475ef97745d1e61452b6f335de14f8@sha256:45ae75cc54622aaefe808392927c6cb3289d439c6a02a0ace83c54bef7b21944
+          name: container-image
